--- a/static/main.css
+++ b/static/main.css
@@ -1,5 +1,10 @@
 @import url(http://fonts.useso.com/css?family=Oswald);
 
+html, body{
+    margin: 0;
+    padding: 0;
+}
+
 h1{
     margin-top: 0;
 }
