--- a/static/main.css
+++ b/static/main.css
@@ -23,6 +23,7 @@ ul{
 #menu ul li a{
     color: #4b4b4b;
     font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, 'Hiragino Sans GB', 'Microsoft Yahei', simsun, sans-serif;
+    font-size: 13px;
     outline: none;
     text-decoration: none;
     transition: color 0.8s;
@@ -86,4 +87,8 @@ ul{
 #logo a:hover{
     color: #000;
     transition: color 0.8s;
+}
+
+.section{
+    color: #fff;
 }
