--- a/static/main.css
+++ b/static/main.css
@@ -166,12 +166,12 @@ ul{
 
 #about_us .item{
     border-top: 1px solid #000;
-    padding: 30px;
+    padding: 30px 30px 30px 50px;
     width: 100%;
 }
 
 #about_us .item_top{
-    padding: 30px;
+    padding: 30px 30px 30px 50px;
     width: 100%;
 }
 
